--- a/Views/Model/EditModel.cshtml
+++ b/Views/Model/EditModel.cshtml
@@ -15,23 +15,25 @@
             <div class="col-md-7">
                 <h2>SELECTED MODEL</h2>
                 <br />
-                <div class="form-group row">
-                    <div class="col-sm-2" style="margin-right: 15px;">
-                        @if (ViewBag.CurrentModel.ImagePath == null || ViewBag.CurrentModel.ImagePath == "")
-                        {
-                            <img id="modelImage" src="~/Images/GenericHat.png" alt="Model Thumbnail" width="90" height="90">
-                        }
-                        else
-                        {
-                            <img id="modelImage" src="~/Images/@ViewBag.CurrentModel.ImagePath" alt="Model Thumbnail"
-                                width="90" height="90">
-                        }
-                    </div>
 
-                    <label>Change picture: </label>
+                <div class="col-sm-2" style="margin-right: 15px;">
+                    @if (ViewBag.CurrentModel.ImagePath == null || ViewBag.CurrentModel.ImagePath == "")
+                    {
+                        <img id="modelImage" src="~/Images/GenericHat.png" alt="Model Thumbnail" width="90" height="90">
+                    }
+                    else
+                    {
+                        <img id="modelImage" src="~/Images/@ViewBag.CurrentModel.ImagePath" alt="Model Thumbnail"
+                             width="90" height="90">
+                    }
                 </div>
-                <div class="col-sm-4" style="margin-bottom: 10px;">
-                    <input type="file" name="imageFile" class="form-control-file" onchange="previewImage(event)" />
+
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label" style="padding-right: 133px;">Change picture:</label>
+
+                    <div class="col-sm-4">
+                        <input type="file" name="imageFile" class="form-control-file" onchange="previewImage(event)" />
+                    </div>
                 </div>
             </div>
             <div class="form-group">
@@ -69,7 +71,7 @@
                 @foreach (var materials in ViewBag.LinkedMaterials)
                 {
                     <input type="checkbox" id="material-@materials.ID" name="SelectedMaterials" value="@materials.ID"
-                        checked="true" />
+                           checked="true" />
                     @materials.Name
                     <br />
                 }
@@ -95,8 +97,9 @@
             }
         </div>
     </div>
-    </div>
     <input type="hidden" name="ModelId" value="@ViewBag.ModelID" />
-    <button type="submit" class="btn btn-primary btn-success" asp-controller="Model" asp-action="SaveEdit">Save
-        changes</button>
+    <button type="submit" class="btn btn-primary btn-success" asp-controller="Model" asp-action="SaveEdit">
+        Save
+        changes
+    </button>
 </form>
