--- a/Views/Model/HandleModels.cshtml
+++ b/Views/Model/HandleModels.cshtml
@@ -87,9 +87,34 @@
                         <label>Product code: </label>
                     </div>
                     <div class="col-sm-4" style="margin-bottom: 10px;">
-                        <input asp-for="ProductCode" class="form-control" />
+                        <select asp-for="ProductCode" class="form-control">
+                            <option value="varukod1">6500 00 00 00</option>
+                            <option value="varukod2">6504 00 00 00</option>
+                            <option value="varukod3">6505 00 00 00</option>
+                            <option value="varukod4">6506 00 00 00</option>
+                            <option value="varukod5">6507 00 00 00</option>
+                            <option value="varukod6">6812 00 00 00</option>
+                            <option value="varukod7">6812 91 00 00</option>
+                        </select>
                     </div>
-
+                    <div class="col-sm-2" style="margin-bottom: 10px;">
+                        <button type="button" class="btn btn-primary" id="infoButton" style="font-size: 12px; background-color: white; color: black;">&#9432;</button>
+                    </div>
+                    <div id="infoPopup" class="infoPopup">
+                        <div class="infoPopup-content">
+                            <span class="close" onclick="closeInfoPopup()">&times;</span>
+                            <h1> Product code  - Description</h1>
+                            <p>6500 00 00 00 - HEADGEAR AND PARTS OF HEADGEAR</p>
+                            <p>6504 00 00 00 - Hats and other headgear, plaited or assembled
+                                from strips or strips of all kinds</p>
+                            <p>6505 00 00 00 - Hats and other headgear, of knitted fabric or made
+                                from lace, felt</p>
+                            <p>6506 00 00 00 - Other headgear, including unlined and ungarnished</p>
+                            <p>6507 00 00 00 - Chinstraps for headgear </p>
+                            <p>6812 00 00 00 - ,headgear, footwear and</p>
+                            <p>6812 91 00 00 - Clothing and accessories for clothing as well as footwear and headgear</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-sm-2" style="margin-right: 15px;">
@@ -117,6 +142,51 @@
                 <button type="submit" class="btn btn-primary" asp-controller="Model" asp-action="AddNewModel">Add new
                     model</button>
             </form>
+
         </div>
     </div>
 </div>
+<style>
+.infoPopup {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+}
+
+.infoPopup-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+</style>
+<script>
+document.getElementById("infoButton").onclick = function() {
+    document.getElementById("infoPopup").style.display = "block";
+}
+
+function closeInfoPopup() {
+    document.getElementById("infoPopup").style.display = "none";
+}
+</script>
