--- a/wwwroot/css/LogIn.css
+++ b/wwwroot/css/LogIn.css
@@ -123,7 +123,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f5f5f5;  Vit bakgrund 
+    background-color: #f5f5f5; 
 }
 
 .gallery {
