--- a/Views/Material/OrderMaterial.cshtml
+++ b/Views/Material/OrderMaterial.cshtml
@@ -23,26 +23,25 @@
         <label for="emailField" class="form-label mt-4">Email:</label>
         <input asp-for="@Model.Supplier.Email" type="text" id="emailField" class="form-control" readonly>
     </div>
-        <div>
+    <div>
         <label for="addressField" class="form-label mt-4">Address:</label>
-        <input asp-for="@Model.Supplier.Address.StreetAddress" type="text" id="addressField" class="form-control" readonly>
+        <input asp-for="@Model.Supplier.Address.StreetAddress" type="text" id="addressField" class="form-control"
+            readonly>
     </div>
-    </div>
-        <div>
+    <div>
         <label for="zipCode" class="form-label mt-4">Zip code:</label>
         <input asp-for="@Model.Supplier.Address.ZipCode" type="text" id="zipCodeField" class="form-control" readonly>
     </div>
-    </div>
-        <div>
+    <div>
         <label for="cityField" class="form-label mt-4">City:</label>
         <input asp-for="@Model.Supplier.Address.City" type="text" id="cityField" class="form-control" readonly>
     </div>
-    </div>
-        <div>
+    <div>
         <label for="addressField" class="form-label mt-4">Country:</label>
         <input asp-for="@Model.Supplier.Address.Country" type="text" id="countryField" class="form-control" readonly>
     </div>
 
     <br />
-<button type="submit" class="btn btn-success btn-primary" asp-controller="Material" asp-action="PlaceOrder">Place order</button>
+    <button type="submit" class="btn btn-success btn-primary" asp-controller="Material" asp-action="PlaceOrder">Place
+        order</button>
 </form>
